Testing combinations: new logo and new header bg. Added some shadows to the condensed menu placed on header and also fixed white spaces on bg number 7.jpg

--- a/app/assets/stylesheets/layout/_header.sass
+++ b/app/assets/stylesheets/layout/_header.sass
@@ -10,4 +10,4 @@
   +rhythm($padding-leader: 0.5, $padding-trailer: 0.5)
   // background: url(/assets/tmp/patterns/23.jpg) right bottom
   // background: url(/assets/tmp/patterns/23.jpg) bottom center
-  background: url(/assets/tmp/patterns/header/10.jpg) top center
+  background: url(/assets/tmp/patterns/header/71.jpg) center center
