--- a/app/assets/stylesheets/modules/_logo.sass
+++ b/app/assets/stylesheets/modules/_logo.sass
@@ -9,5 +9,5 @@
 .logo
   float: left
   img
-    width: 100%
+    height: 48px
     display: block
